Updated login and registeration using the username

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="action_info">Info</string>
     <string name="textview_firstname">First Name </string>
     <string name="textview_lastname">Last Name </string>
+    <string name="textview_username">Username </string>
+    
 
 </resources>
