Fixed the picture taking DialogFragment and added photo taken by who

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,15 +8,15 @@
     <string name="action_next">Next</string>
     <string name="action_finish">Finish</string>
     <string name="name1">Western Gray Squirrel</string>
-    <string name="desciption1">Native Species - White fur on the abdomen, gray fur on sides and back, tail very bushy with white-tipped hairs.</string>
+    <string name="desciption1">Native Species - White fur on the abdomen, gray fur on sides and back, tail very bushy with white-tipped hairs. Photo by Alan Muchlinski.</string>
     <string name="name2">Douglas Squirrel</string>
-    <string name="desciption2">Native Species - Fur on abdomen is light to dark orange, grayish-brown fur on sides and back, found in coniferous (pine) forests.</string>
+    <string name="desciption2">Native Species - Fur on abdomen is light to dark orange, grayish-brown fur on sides and back, found in coniferous (pine) forests. Photo by Phil Meyers.</string>
     <string name="name3">Eastern Gray Squirrel</string>
-    <string name="desciption3">Introduced Species - White fur on the abdomen, light gray to rust colored fur on the sides and back, tail is light gray with rust coloration and hairs have white tips.</string>
+    <string name="desciption3">Introduced Species - White fur on the abdomen, light gray to rust colored fur on the sides and back, tail is light gray with rust coloration and hairs have white tips. Photo by Tom Friedel.</string>
     <string name="name4">Eastern Fox Squirrel</string>
-    <string name="desciption4">Introduced Species - Orange to rust colored fur on abdomen, reddish-brown colored fur on sides, back, and tail.</string>
+    <string name="desciption4">Introduced Species - Orange to rust colored fur on abdomen, reddish-brown colored fur on sides, back, and tail. Photo by Alan Muchlinski.</string>
     <string name="name5">Melanistic Squirrel</string>
-    <string name="desciption5">Introduced Species - Black fur all over the animal.  The melanistic color variant is present in populations of both the Eastern Gray Squirrel and the Eastern Fox Squirrel.</string>
+    <string name="desciption5">Introduced Species - Black fur all over the animal.  The melanistic color variant is present in populations of both the Eastern Gray Squirrel and the Eastern Fox Squirrel. Photo by Ja Ga.</string>
     <string name="action_settings">Settings</string>
     <string name="first_page">California Tree Squirrel Application</string>
     <string name="first_page_1">There are 4 species of tree squirrels currently living in California that are active during the day and therefore are likely to be observed by people.</string>
