Added Network data connectivity check

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,10 +37,10 @@
     <string name="textview_lastname">Last Name </string>
     <string name="textview_username">Username </string>
     
-    <string name="sendURL">http://cs3.calstatela.edu:4042/squirrels/service/siting/submit</string>
+    <string name="sendURL">http://cs3.calstatela.edu:4042/squirrels/mobileservice/siting/submit</string>
     <string name="loginURL">http://cs3.calstatela.edu:4042/squirrels/j_spring_security_check</string>
     <string name="registerURL">http://cs3.calstatela.edu:4042/squirrels/service/user/register</string>
-    <string name="sendWithPhotURL">http://cs3.calstatela.edu:4042/squirrels/service/siting/submitphoto</string>
+    <!-- <string name="sendWithPhotURL">http://cs3.calstatela.edu:4042/squirrels/service/siting/submitphoto</string> -->
     
     <string name="photo_album_name">Squirrels</string>
     <string name="cannot">Cannot</string>
