--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,11 +12,11 @@
     <string name="name2">Douglas Squirrel</string>
     <string name="desciption2">Native Species - Fur on abdomen is light to dark orange, grayish-brown fur on sides and back, found in coniferous (pine) forests. Photo by Phil Meyers.</string>
     <string name="name3">Eastern Gray Squirrel</string>
-    <string name="desciption3">Introduced Species - White fur on the abdomen, light gray to rust colored fur on the sides and back, tail is light gray with rust coloration and hairs have white tips. Photo by Tom Friedel.</string>
+    <string name="desciption3">Introduced Species - White fur on the abdomen, light gray to rust colored fur on the sides and back, tail is light gray with rust coloration and hairs have white tips. Photo by Tom Friedel. http://en.wikipedia.org/wiki/Eastern_gray_squirrel</string>
     <string name="name4">Eastern Fox Squirrel</string>
     <string name="desciption4">Introduced Species - Orange to rust colored fur on abdomen, reddish-brown colored fur on sides, back, and tail. Photo by Alan Muchlinski.</string>
     <string name="name5">Melanistic Squirrel</string>
-    <string name="desciption5">Introduced Species - Black fur all over the animal.  The melanistic color variant is present in populations of both the Eastern Gray Squirrel and the Eastern Fox Squirrel. Photo by Ja Ga.</string>
+    <string name="desciption5">Introduced Species - Black fur all over the animal.  The melanistic color variant is present in populations of both the Eastern Gray Squirrel and the Eastern Fox Squirrel. Photo by Ja Ga. http://en.wikipedia.org/wiki/Black_squirrel</string>
     <string name="action_settings">Settings</string>
     <string name="first_page">California Tree Squirrel Application</string>
     <string name="first_page_1">There are 4 species of tree squirrels currently living in California that are active during the day and therefore are likely to be observed by people.</string>
@@ -25,6 +25,8 @@
     <string name="first_page_4">An introduced species can interact with a native species in ways that are detrimental to the native species.</string>
     <string name="first_page_5">For example, the introduced eastern fox squirrel has replaced the native western gray squirrel in many locations within California, Oregon, and Washington states. And, the eastern fox squirrel is rapidly expanding its geographic range within California. The eastern gray squirrel is ranked among the 100 worst invasive species in the Global Invasive Species Database.</string>
     <string name="first_page_6">Use this application to report which species you are observing and you will be contributing information to a real and important scientific research project.</string>
+    <string name="first_page_7">Please send an email to californiatreesquirrels@gmail.com if you wish to provide additional information. You may follow the progress of this study by accessing the “California Tree Squirrels” page on Facebook.</string>
+    
     <string name="start">Start</string>
     <string name="textview_password">Password </string>
     <string name="button_registeration">Don\'t have an account? Please register. It\'s Free!</string>
@@ -33,18 +35,20 @@
     <string name="textview_email">Email </string>
     <string name="action_signout">Sign Out</string>
     <string name="action_info">Info</string>
+    <string name="action_instructions">How To</string>
+   
     <string name="textview_firstname">First Name </string>
     <string name="textview_lastname">Last Name </string>
     <string name="textview_username">Username </string>
-    
     <string name="sendURL">http://cs3.calstatela.edu:4042/squirrels/mobileservice/siting/submit</string>
     <string name="loginURL">http://cs3.calstatela.edu:4042/squirrels/j_spring_security_check</string>
     <string name="registerURL">http://cs3.calstatela.edu:4042/squirrels/service/user/register</string>
     <!-- <string name="sendWithPhotURL">http://cs3.calstatela.edu:4042/squirrels/service/siting/submitphoto</string> -->
-    
+
     <string name="photo_album_name">Squirrels</string>
     <string name="cannot">Cannot</string>
     <string name="btnIntend">Snap a Picture</string>
     <string name="btnSend">Send it!</string>
-    
+    <string name="title_activity_instructions">Instructions Page</string>
+
 </resources>
