--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="action_signout">Sign Out</string>
     <string name="action_info">Info</string>
     <string name="action_instructions">How To</string>
+    <string name="action_send_saved_sightings">Send Saved Sightings</string>
    
     <string name="textview_firstname">First Name </string>
     <string name="textview_lastname">Last Name </string>
