--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,16 +7,28 @@
     <string name="action_previous">Prev</string>
     <string name="action_next">Next</string>
     <string name="action_finish">Finish</string>
+    
+    <string name="instructions1">After you click the Start button you will see a picture of one of the squirrel species, you can swipe right or left to see the others and you can click SAW It to report a sighting of the squirrel.</string>
     <string name="name1">Western Gray Squirrel</string>
-    <string name="desciption1">Native Species - White fur on the abdomen, gray fur on sides and back, tail very bushy with white-tipped hairs. Photo by Alan Muchlinski.</string>
+    <string name="desciption1">Native Species - White fur on the abdomen, gray fur on sides and back, tail very bushy with white-tipped hairs.</string>
+    <string name="photoby1">Photo by Alan Muchlinski</string>
+    
     <string name="name2">Douglas Squirrel</string>
-    <string name="desciption2">Native Species - Fur on abdomen is light to dark orange, grayish-brown fur on sides and back, found in coniferous (pine) forests. Photo by Phil Meyers.</string>
+    <string name="desciption2">Native Species - Fur on abdomen is light to dark orange, grayish-brown fur on sides and back, found in coniferous (pine) forests.</string>
+    <string name="photoby2">Photo by Phil Meyers</string>
+    
     <string name="name3">Eastern Gray Squirrel</string>
-    <string name="desciption3">Introduced Species - White fur on the abdomen, light gray to rust colored fur on the sides and back, tail is light gray with rust coloration and hairs have white tips. Photo by Tom Friedel. http://en.wikipedia.org/wiki/Eastern_gray_squirrel</string>
+    <string name="desciption3">Introduced Species - White fur on the abdomen, light gray to rust colored fur on the sides and back, tail is light gray with rust coloration and hairs have white tips.</string>
+    <string name="photoby3">Photo by Tom Friedel</string>
+    
     <string name="name4">Eastern Fox Squirrel</string>
-    <string name="desciption4">Introduced Species - Orange to rust colored fur on abdomen, reddish-brown colored fur on sides, back, and tail. Photo by Alan Muchlinski.</string>
+    <string name="desciption4">Introduced Species - Orange to rust colored fur on abdomen, reddish-brown colored fur on sides, back, and tail.</string>
+    <string name="photoby4">Photo by Alan Muchlinski</string>
+    
     <string name="name5">Melanistic Squirrel</string>
-    <string name="desciption5">Introduced Species - Black fur all over the animal.  The melanistic color variant is present in populations of both the Eastern Gray Squirrel and the Eastern Fox Squirrel. Photo by Ja Ga. http://en.wikipedia.org/wiki/Black_squirrel</string>
+    <string name="desciption5">Introduced Species - Black fur all over the animal.  The melanistic color variant is present in populations of both the Eastern Gray Squirrel and the Eastern Fox Squirrel.</string>
+    <string name="photoby5">Photo by Ja Ga</string>    
+    
     <string name="action_settings">Settings</string>
     <string name="first_page">California Tree Squirrel Application</string>
     <string name="first_page_1">There are 4 species of tree squirrels currently living in California that are active during the day and therefore are likely to be observed by people.</string>
