--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="name1">Western Gray Squirrel</string>
     <string name="desciption1">Native Species - White fur on the abdomen, gray fur on sides and back, tail very bushy with white-tipped hairs.</string>
     <string name="photoby1">Photo by Alan Muchlinski</string>
-    <string name="httplink1">http://cs3.calstatela.edu:4042/squirrels</string>
+    <string name="httplink1">http://squirrel.calstatela.edu/squirrels</string>
     
 
     <string name="name2">Douglas Squirrel</string>
@@ -30,7 +30,7 @@
     <string name="name4">Eastern Fox Squirrel</string>
     <string name="desciption4">Introduced Species - Orange to rust colored fur on abdomen, reddish-brown colored fur on sides, back, and tail.</string>
     <string name="photoby4">Photo by Alan Muchlinski</string>
-    <string name="httplink4">http://cs3.calstatela.edu:4042/squirrels</string>
+    <string name="httplink4">http://squirrel.calstatela.edu/squirrels</string>
     
     
     <string name="name5">Melanistic Squirrel</string>
@@ -63,10 +63,11 @@
     <string name="textview_firstname">First Name </string>
     <string name="textview_lastname">Last Name </string>
     <string name="textview_username">Username </string>
-    <string name="sendURL">http://cs3.calstatela.edu:4042/squirrels/mobileservice/siting/submit</string>
-    <string name="loginURL">http://cs3.calstatela.edu:4042/squirrels/j_spring_security_check</string>
-    <string name="registerURL">http://cs3.calstatela.edu:4042/squirrels/service/user/register</string>
-    <!-- <string name="sendWithPhotURL">http://cs3.calstatela.edu:4042/squirrels/service/siting/submitphoto</string> -->
+    <!--old url http://cs3.calstatela.edu:4042 -->
+    <string name="sendURL">http://squirrel.calstatela.edu/squirrels/mobileservice/siting/submit</string>
+    <string name="loginURL">http://squirrel.calstatela.edu/squirrels/j_spring_security_check</string>
+    <string name="registerURL">http://squirrel.calstatela.edu/squirrels/service/user/register</string>
+    <!-- <string name="sendWithPhotURL">http://squirrel.calstatela.edu/squirrels/service/siting/submitphoto</string> -->
 
     <string name="photo_album_name">Squirrels</string>
     <string name="cannot">Cannot</string>
